[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/base_piece.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12, 12 )

[node name="base_piece" type="Area2D"]

input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 12, 12 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]

position = Vector2( 12, 12 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="tree_exited" from="." to="." method="_on_base_piece_exit_tree" binds=[  ]]

[connection signal="mouse_entered" from="." to="." method="_on_base_piece_mouse_enter" binds=[  ]]

[connection signal="mouse_exited" from="." to="." method="_on_base_piece_mouse_exit" binds=[  ]]
